Add Rails 7 to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
           - rails_5_2
           - rails_6
           - rails_6_1
+          - rails_7
           - rails_master
         exclude:
           - ruby: '3.0'
