--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0']
+        ruby: ['2.7', '3.0', '3.1']
         gemfile:
           - rails_5_2
           - rails_6
@@ -21,6 +21,8 @@ jobs:
           - rails_master
         exclude:
           - ruby: '3.0'
+            gemfile: 'rails_5_2'
+          - ruby: '3.1'
             gemfile: 'rails_5_2'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -51,14 +53,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0']
+        ruby: ['2.7', '3.0', '3.1']
         gemfile:
           - rails_5_2
           - rails_6
           - rails_6_1
+          - rails_7
           - rails_master
         exclude:
           - ruby: '3.0'
+            gemfile: 'rails_5_2'
+          - ruby: '3.1'
             gemfile: 'rails_5_2'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -98,14 +103,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0']
+        ruby: ['2.7', '3.0', '3.1']
         gemfile:
           - rails_5_2
           - rails_6
           - rails_6_1
+          - rails_7
           - rails_master
         exclude:
           - ruby: '3.0'
+            gemfile: 'rails_5_2'
+          - ruby: '3.1'
             gemfile: 'rails_5_2'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
