Catch RecordNotFound errors when deserializing
Instead of raising a 404 which is confusing, this will catch invalid
params and replace them with a new hash.

Also introduces `deserialize_error?` on the model to make cleanup of
invalid notification params easier.

--- a/test/fixtures/notifications.yml
+++ b/test/fixtures/notifications.yml
@@ -8,3 +8,14 @@ one:
     _aj_symbol_keys:
     - account
   read_at: <%= Time.current %>
+
+missing_account:
+  type: CommentNotification
+  recipient: one (User)
+  params:
+    foo: bar
+    account:
+      _aj_globalid: gid://dummy/Account/100000
+    _aj_symbol_keys:
+    - account
+  read_at: <%= Time.current %>
