--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['2.7', '3.0', '3.1', '3.2']
         gemfile:
           - rails_5_2
           - rails_6
@@ -23,6 +23,8 @@ jobs:
           - ruby: '3.0'
             gemfile: 'rails_5_2'
           - ruby: '3.1'
+            gemfile: 'rails_5_2'
+          - ruby: '3.2'
             gemfile: 'rails_5_2'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -53,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['2.7', '3.0', '3.1', '3.2']
         gemfile:
           - rails_5_2
           - rails_6
@@ -64,6 +66,8 @@ jobs:
           - ruby: '3.0'
             gemfile: 'rails_5_2'
           - ruby: '3.1'
+            gemfile: 'rails_5_2'
+          - ruby: '3.2'
             gemfile: 'rails_5_2'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -103,7 +107,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['2.7', '3.0', '3.1', '3.2']
         gemfile:
           - rails_5_2
           - rails_6
@@ -114,6 +118,8 @@ jobs:
           - ruby: '3.0'
             gemfile: 'rails_5_2'
           - ruby: '3.1'
+            gemfile: 'rails_5_2'
+          - ruby: '3.2'
             gemfile: 'rails_5_2'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
