Add ruby 3.2 to CI (#265)
* Add ruby 3.2 to CI

* Update gemfiles

* Update gemfiles

* Update to latest rubygems in CI

* Standardize

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,15 @@ jobs:
             gemfile: 'rails_5_2'
           - ruby: '3.2'
             gemfile: 'rails_5_2'
+          - ruby: '3.2'
+            gemfile: 'rails_6'
+
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       BUNDLE_PATH_RELATIVE_TO_CWD: true
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -39,6 +42,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler: default
           bundler-cache: true
+          rubygems: latest
 
       - name: StandardRb check
         run: bundle exec standardrb
@@ -69,6 +73,9 @@ jobs:
             gemfile: 'rails_5_2'
           - ruby: '3.2'
             gemfile: 'rails_5_2'
+          - ruby: '3.2'
+            gemfile: 'rails_6'
+
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       BUNDLE_PATH_RELATIVE_TO_CWD: true
@@ -83,7 +90,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -91,6 +98,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler: default
           bundler-cache: true
+          rubygems: latest
 
       - name: StandardRb check
         run: bundle exec standardrb
@@ -121,6 +129,9 @@ jobs:
             gemfile: 'rails_5_2'
           - ruby: '3.2'
             gemfile: 'rails_5_2'
+          - ruby: '3.2'
+            gemfile: 'rails_6'
+
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       BUNDLE_PATH_RELATIVE_TO_CWD: true
@@ -135,7 +146,7 @@ jobs:
         ports: ['5432:5432']
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -143,6 +154,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler: default
           bundler-cache: true
+          rubygems: latest
 
       - name: StandardRb check
         run: bundle exec standardrb
