--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           - rails_6_1
           - rails_7
           - rails_7_1
-          - rails_master
+          - rails_main
         exclude:
           - ruby: '3.0'
             gemfile: 'rails_5_2'
@@ -27,12 +27,14 @@ jobs:
             gemfile: 'rails_5_2'
           - ruby: '3.2'
             gemfile: 'rails_5_2'
+          - ruby: '3.2'
+            gemfile: 'rails_6'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       BUNDLE_PATH_RELATIVE_TO_CWD: true
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -40,6 +42,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler: default
           bundler-cache: true
+          rubygems: latest
 
       - name: StandardRb check
         run: bundle exec standardrb
@@ -63,7 +66,7 @@ jobs:
           - rails_6_1
           - rails_7
           - rails_7_1
-          - rails_master
+          - rails_main
         exclude:
           - ruby: '3.0'
             gemfile: 'rails_5_2'
@@ -71,6 +74,8 @@ jobs:
             gemfile: 'rails_5_2'
           - ruby: '3.2'
             gemfile: 'rails_5_2'
+          - ruby: '3.2'
+            gemfile: 'rails_6'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       BUNDLE_PATH_RELATIVE_TO_CWD: true
@@ -85,7 +90,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -93,6 +98,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler: default
           bundler-cache: true
+          rubygems: latest
 
       - name: StandardRb check
         run: bundle exec standardrb
@@ -116,7 +122,7 @@ jobs:
           - rails_6_1
           - rails_7
           - rails_7_1
-          - rails_master
+          - rails_main
         exclude:
           - ruby: '3.0'
             gemfile: 'rails_5_2'
@@ -124,6 +130,8 @@ jobs:
             gemfile: 'rails_5_2'
           - ruby: '3.2'
             gemfile: 'rails_5_2'
+          - ruby: '3.2'
+            gemfile: 'rails_6'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       BUNDLE_PATH_RELATIVE_TO_CWD: true
@@ -138,7 +146,7 @@ jobs:
         ports: ['5432:5432']
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -146,6 +154,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler: default
           bundler-cache: true
+          rubygems: latest
 
       - name: StandardRb check
         run: bundle exec standardrb
