--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,22 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2']
+        ruby: ['3.0', '3.1', '3.2']
         gemfile:
-          - rails_5_2
-          - rails_6
           - rails_6_1
           - rails_7
           - rails_main
-        exclude:
-          - ruby: '3.0'
-            gemfile: 'rails_5_2'
-          - ruby: '3.1'
-            gemfile: 'rails_5_2'
-          - ruby: '3.2'
-            gemfile: 'rails_5_2'
-          - ruby: '3.2'
-            gemfile: 'rails_6'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -59,22 +48,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2']
+        ruby: ['3.0', '3.1', '3.2']
         gemfile:
-          - rails_5_2
-          - rails_6
           - rails_6_1
           - rails_7
           - rails_main
-        exclude:
-          - ruby: '3.0'
-            gemfile: 'rails_5_2'
-          - ruby: '3.1'
-            gemfile: 'rails_5_2'
-          - ruby: '3.2'
-            gemfile: 'rails_5_2'
-          - ruby: '3.2'
-            gemfile: 'rails_6'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -115,22 +93,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2']
+        ruby: ['3.0', '3.1', '3.2']
         gemfile:
-          - rails_5_2
-          - rails_6
           - rails_6_1
           - rails_7
           - rails_main
-        exclude:
-          - ruby: '3.0'
-            gemfile: 'rails_5_2'
-          - ruby: '3.1'
-            gemfile: 'rails_5_2'
-          - ruby: '3.2'
-            gemfile: 'rails_5_2'
-          - ruby: '3.2'
-            gemfile: 'rails_6'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
