--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         ruby: ['3.0', '3.1', '3.2']
         gemfile:
+          - rails_6_1
           - rails_7
           - rails_7_1
           - rails_main
@@ -51,6 +52,7 @@ jobs:
       matrix:
         ruby: ['3.0', '3.1', '3.2']
         gemfile:
+          - rails_6_1
           - rails_7
           - rails_7_1
           - rails_main
@@ -96,6 +98,7 @@ jobs:
       matrix:
         ruby: ['3.0', '3.1', '3.2']
         gemfile:
+          - rails_6_1
           - rails_7
           - rails_7_1
           - rails_main
@@ -106,7 +109,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12
+        image: postgres:16
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
