Add read & seen to notifications

--- a/test/fixtures/noticed/notifications.yml
+++ b/test/fixtures/noticed/notifications.yml
@@ -18,7 +18,7 @@ three:
   read_at: 2023-12-15 13:03:19
   seen_at: 2023-12-15 13:03:19
 
-two:
+four:
   event: three
   recipient: two (Account)
   read_at: 2023-12-15 13:03:19
