--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       BUNDLE_PATH_RELATIVE_TO_CWD: true
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -72,12 +72,14 @@ jobs:
         image: mysql:8.2
         env:
           MYSQL_ROOT_PASSWORD: password
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
           MYSQL_DATABASE: test
         ports: ['3306:3306']
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -92,7 +94,7 @@ jobs:
 
       - name: Run tests
         env:
-          DATABASE_URL: trilogy://root:password@127.0.0.1:3306/test
+          DATABASE_URL: trilogy://user:password@127.0.0.1:3306/test
           RAILS_ENV: test
         run: |
           bundle exec rails db:test:prepare
@@ -126,7 +128,7 @@ jobs:
         ports: ['5432:5432']
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
