Try using mysql 8 without a password in CI until trilogy supports caching_sha2_password

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,11 +69,9 @@ jobs:
 
     services:
       mysql:
-        image: mysql:8.2
+        image: mysql:8
         env:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_USER: user
-          MYSQL_PASSWORD: password
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
           MYSQL_DATABASE: test
         ports: ['3306:3306']
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -94,7 +92,7 @@ jobs:
 
       - name: Run tests
         env:
-          DATABASE_URL: trilogy://user:password@127.0.0.1:3306/test
+          DATABASE_URL: trilogy://root:@127.0.0.1:3306/test
           RAILS_ENV: test
         run: |
           bundle exec rails db:test:prepare
