--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['3.0', '3.1', '3.2', '3.3']
+        ruby: ['3.1', '3.2', '3.3']
         gemfile:
           - rails_6_1
           - rails_7
           - rails_7_1
+          - rails_7_2
           - rails_main
-        exclude:
-          - ruby: '3.0'
-            gemfile: 'rails_main'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -54,15 +52,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['3.0', '3.1', '3.2', '3.3']
+        ruby: ['3.1', '3.2', '3.3']
         gemfile:
           - rails_6_1
           - rails_7
           - rails_7_1
+          - rails_7_2
           - rails_main
-        exclude:
-          - ruby: '3.0'
-            gemfile: 'rails_main'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -103,15 +99,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['3.0', '3.1', '3.2', '3.3']
+        ruby: ['3.1', '3.2', '3.3']
         gemfile:
           - rails_6_1
           - rails_7
           - rails_7_1
+          - rails_7_2
           - rails_main
-        exclude:
-          - ruby: '3.0'
-            gemfile: 'rails_main'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
