--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3']
+        ruby: ['3.2', '3.3']
         gemfile:
           - rails_6_1
           - rails_7
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3']
+        ruby: ['3.2', '3.3']
         gemfile:
           - rails_6_1
           - rails_7
@@ -99,7 +99,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3']
+        ruby: ['3.2', '3.3']
         gemfile:
           - rails_6_1
           - rails_7
