Skip CI for Ruby 3.4 + sqlite 1.x

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,21 @@ jobs:
         ruby: ['3.2', '3.3', '3.4']
         gemfile:
           - rails_6_1
-          - rails_7
+          - rails_7_0
           - rails_7_1
           - rails_7_2
           - rails_8_0
           - rails_main
+        exclude:
+          # sqlite3 ~> 1.7 is not compatible with Ruby 3.4+
+          - gemfile: rails_6_1
+            ruby: '3.4'
+          - gemfile: rails_7_0
+            ruby: '3.4'
+          - gemfile: rails_7_1
+            ruby: '3.4'
+          - gemfile: rails_7_2
+            ruby: '3.4'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -56,11 +66,21 @@ jobs:
         ruby: ['3.2', '3.3', '3.4']
         gemfile:
           - rails_6_1
-          - rails_7
+          - rails_7_0
           - rails_7_1
           - rails_7_2
           - rails_8_0
           - rails_main
+        exclude:
+          # sqlite3 ~> 1.7 is not compatible with Ruby 3.4+
+          - gemfile: rails_6_1
+            ruby: '3.4'
+          - gemfile: rails_7_0
+            ruby: '3.4'
+          - gemfile: rails_7_1
+            ruby: '3.4'
+          - gemfile: rails_7_2
+            ruby: '3.4'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
@@ -104,11 +124,21 @@ jobs:
         ruby: ['3.2', '3.3', '3.4']
         gemfile:
           - rails_6_1
-          - rails_7
+          - rails_7_0
           - rails_7_1
           - rails_7_2
           - rails_8_0
           - rails_main
+        exclude:
+          # sqlite3 ~> 1.7 is not compatible with Ruby 3.4+
+          - gemfile: rails_6_1
+            ruby: '3.4'
+          - gemfile: rails_7_0
+            ruby: '3.4'
+          - gemfile: rails_7_1
+            ruby: '3.4'
+          - gemfile: rails_7_2
+            ruby: '3.4'
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
